5-71 more view encapsulation, e.g. can use default css behavior if needed, *does not compile*

--- a/src/app/server-element/server-element.component.css
+++ b/src/app/server-element/server-element.component.css
@@ -1,4 +1,6 @@
-/* note, this will apply blue but the red overrides */
-p {
-  color: blue;
+
+
+/* with ViewEncapsulation.None set this will be applied globally! */
+label {
+    color: greenyellow
 }
