--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -10,7 +10,11 @@
 
 
     <label>Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent">
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+    <input 
+      type="text" 
+      class="form-control" 
+      #serverContentInput>
     <br>
     <button class="btn btn-primary" (click)="onAddServer(serverNameInput)">Add Server</button>
     <button class="btn btn-primary" (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint</button>
