--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,15 @@
     <div class="col-xs-12">
       <app-server-element 
         *ngFor="let serverElement of serverElements"
-        [srvElement]="serverElement"
-      >
+        [srvElement]="serverElement"> <!-- You do need this line, component can't get serverElement from this file directly -->
+
+        <p>
+        <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+        <em *ngIf="serverElement.type === 'blueprint'" style="color: blue">{{ serverElement.content }}</em>
+        </p>
+
+
+      
       </app-server-element>
     </div>
   </div>
