--- a/src/app/server-element/server-element.component.html
+++ b/src/app/server-element/server-element.component.html
@@ -1,9 +1,11 @@
 <div class="panel panel-default">
   <div class="panel-heading">{{ element.name }}</div>
   <div class="panel-body">
-    <p>
+    <!-- <p>
       <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
       <em *ngIf="element.type === 'blueprint'" style="color: blue">{{ element.content }}</em>
-    </p>
+    </p> -->
+    <ng-content></ng-content>
+    <!-- <p>note still is passing in as srvElement {{ element.name }}</p> -->
   </div>
 </div>
