--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,13 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">change first</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">destroy first</button>
       <app-server-element 
         *ngFor="let serverElement of serverElements"
-        [srvElement]="serverElement"> <!-- You do need this line, component can't get serverElement from this file directly -->
-
+        [srvElement]="serverElement"
+        [name]="serverElement.name">
+        
         <p>
         <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
         <em *ngIf="serverElement.type === 'blueprint'" style="color: blue">{{ serverElement.content }}</em>
